<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="585dp"
        android:layout_height="840dp"
        android:src="@drawable/marvel_universe_characters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        android:contentDescription="@string/characters_img" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/dark_red"
        android:text="@string/start_btn"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlayerNickname"
        app:layout_constraintVertical_bias="0.352" />

    <EditText
        android:id="@+id/etPlayerNickname"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginTop="248dp"
        android:alpha="2"
        android:backgroundTint="@color/beige"
        android:background="@color/white"
        android:hint="@string/nickname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>