<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">


    <TextView
        android:id="@+id/tvQuote"
        android:layout_width="337dp"
        android:layout_height="141dp"
        android:layout_marginTop="104dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPlayersAnswer"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:hint="@string/input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        android:textColorHint="#757575"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuote" />

    <Button
        android:id="@+id/btn_scoreboard"
        android:layout_width="141dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/red"
        android:text="@string/scoreboard"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlayersAnswer"
        app:layout_constraintVertical_bias="0.47" />

    <ImageButton
        android:id="@+id/ibtnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/check_btn"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintStart_toEndOf="@+id/etPlayersAnswer"
        app:layout_constraintTop_toBottomOf="@+id/tvQuote"
        tools:ignore="RedundantDescriptionCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>